<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_title" />
    <com.atakmap.android.gui.PanSwitchPreference
        android:key="plugin_mumbleptt_ptt"
        android:title="@string/set_ptt"
        android:summary="@string/set_ptt_summary"
        android:defaultValue="true" />
    <!--
    <com.atakmap.android.gui.PanSwitchPreference
        android:key="plugin_mumbleptt_s2t"
        android:title="@string/set_s2t"
        android:summary="@string/set_s2t_summary"
        android:defaultValue="false" />
    -->
    <com.atakmap.android.gui.PanListPreference
        android:key="plugin_mumbleptt_hwbutton"
        android:title="@string/use_hwbutton"
        android:summary="@string/use_hwbutton_summary"
        android:dialogTitle="@string/use_hwbutton"
        android:entries="@array/buttons"
        android:entryValues="@array/button_values"
        android:defaultValue="999"/>
</PreferenceScreen>